--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <a href="https://www.linkedin.com/in/david-pyle-27990a6/" target="_blank">LinkedIn</a>
           <br><br>
 
-          ‹form id="contactform" action="https://formspree.io/f/xnqrnvro" method="POST">
+          <form id="contactform" action="https://formspree.io/f/xnqrnvro" method="POST">
 
             <label for="name">Please enter your name:*</label>
             <br>
